# dataStructure_cpp

./: CMakeLists.txt
dynamicArray/: DynamicArray.c  DynamicArray.h  main.c
heap/maxHeap/: main.cpp
sort/: SortTestHelper.h
sort/insertionSort/: main.cpp
sort/mergeSort/: main.cpp  mergeSortBU.cpp
sort/quickSort/: main.cpp
sort/selectionSort/: Student.h  main.cpp
